# goit-pythonweb-hw-06

./: README.md  config.ini.exemple  init_db.py  list_entities.py.py  my_select.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0256d2fea9d7_initial_migration_create_tables.py
database/: db.py  logger_config.py  models.py  seed.py
